[tool.poetry]
name = "projet-morpion"
version = "0.1.0"
description = "Un jeu de morpion qui aest programmé en Python."
authors = ["Raynald LAOKHAMTHONG & Huna LARGITTE"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
pandas = "^2.2.2"
matplotlib = "^3.9.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
flake8 = "^7.1.0"
mypy = "^1.10.1"
isort = "^5.13.2"
coverage = "^7.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
